Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
-
0.4.8-dev-156-g6465705 https://github.com/reactos/reactos/commit/64657051c3cb60f1997ffa6c6dfda57adffc7547
Description
To reproduce:
- Open disk properties
- Close disk properties
- ...
- PROFIT!!!
Unable to show properties (Error Code: 1003).
Looks like this error message was introduced inĀ 6465705 by katayama_hirofumi_mz.
Also cc Smiley as committer. Debug log and screenshots attached.
Attachments
Issue Links
- blocks
-
CORE-13841 Implement ejection of CD/DVD/USB
-
- Resolved
-
- relates to
-
CORE-14047 Shell32: Property sheet of drive, file and folder should be modeless
-
- Resolved
-