[SHELL32] Don't show error when closing disk prop sheet (#144)

CORE-14035